testsuite/tests/module/mod19.stderr
mod19.hs:3:1: error: [GHC-29916] Multiple declarations of ‘C’
    At: mod19.hs:3:1-22
        mod19.hs:2:1-22

mod19.hs:3:17: error: [GHC-29916] Multiple declarations of ‘m’
    At: mod19.hs:3:17-22
        mod19.hs:2:17-22

