testsuite/tests/module/mod19.hs
-- !!! Testing duplicate classes
class C a where m :: a
class C a where m :: a
